// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config 1`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## MyClass

This is my class, a demo thing.

**Properties**

-   \`howMany\` **[number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** how many things it contains

### getFoo

Get the number 42

**Parameters**

-   \`getIt\` **[boolean](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean)** whether to get the number

Returns **[number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** forty-two

### getUndefined

Get undefined

Returns **[undefined](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined)** does not return anything.

## Hello

World

"
`;

exports[`config with nested sections 1`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## Alpha




### third

This function is third

### first

This function is first

### first

forgot a memberof here... sure hope that doesn't crash anything!

## Bravo

Contains a subsection!


### Charlie

Second is in here


#### second

This class has some members

##### foo

second::foo

**Parameters**

-   \`pork\`  

##### bar

second::bar

**Parameters**

-   \`beans\`  
-   \`rice\`  

## AClass

### second

shares a name with a top level item referenced in the TOC... sure hope
that doesn't crash anything!
"
`;

exports[`external modules option 1`] = `
Array [
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 10,
        },
        "start": Position {
          "column": 0,
          "line": 8,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "I am in ",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 28,
                  "line": 1,
                  "offset": 27,
                },
                "indent": Array [],
                "start": Object {
                  "column": 9,
                  "line": 1,
                  "offset": 8,
                },
              },
              "type": "inlineCode",
              "value": "external.input.js",
            },
            Object {
              "position": Position {
                "end": Object {
                  "column": 29,
                  "line": 1,
                  "offset": 28,
                },
                "indent": Array [],
                "start": Object {
                  "column": 28,
                  "line": 1,
                  "offset": 27,
                },
              },
              "type": "text",
              "value": ".",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 29,
              "line": 1,
              "offset": 28,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 29,
          "line": 1,
          "offset": 28,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 7,
      },
      "start": Position {
        "column": 0,
        "line": 5,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "foo",
    "namespace": "foo",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "foo",
      },
    ],
    "properties": Array [],
    "returns": Array [],
    "sees": Array [],
    "tags": Array [],
    "throws": Array [],
    "todos": Array [],
  },
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 10,
        },
        "start": Position {
          "column": 0,
          "line": 7,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 6,
      },
      "start": Position {
        "column": 0,
        "line": 3,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "main",
    "namespace": "main",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "main",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "index",
    "namespace": "index",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "index",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "return",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
]
`;

exports[`git option 1`] = `
Array [
  Object {
    "augments": Array [],
    "context": Object {
      "github": "[github]",
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "simple.input",
    "namespace": "simple.input",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "simple.input",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
]
`;

exports[`git option 2`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## simple.input

[undefined:5-8](<> \\"Source code on GitHub\\")

This function returns the number one.

Returns **[number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** numberone
"
`;

exports[`highlightAuto md output 1`] = `
"<!-- Generated by documentation.js. Update this documentation by updating the source code. -->

## multilanguage.input

**Extends Foo, Bar**

This function returns the number one.

**Examples**

\`\`\`js
var myFoo = new Foo('[data-foo]');
myFoo.foo(42);
\`\`\`

\`\`\`html
<p data-foo>Data-Foo Element in the dom</p>
\`\`\`

\`\`\`css
[data-foo] {
   background-color: red;
}
\`\`\`

-   Throws **[Error](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error)** if you give it something
-   Throws **[TypeError](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/TypeError)** if you give it something else

Returns **[Number](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number)** numberone
"
`;

exports[`html nested.input.js 1`] = `
"<!doctype html>
<html>
<head>
  <meta charset='utf-8' />
  <title>documentation 5.3.1 | Documentation</title>
  <meta name='viewport' content='width=device-width,initial-scale=1'>
  <link href='assets/bass.css' type='text/css' rel='stylesheet' />
  <link href='assets/style.css' type='text/css' rel='stylesheet' />
  <link href='assets/github.css' type='text/css' rel='stylesheet' />
  <link href='assets/split.css' type='text/css' rel='stylesheet' />
</head>
<body class='documentation m0'>
    <div class='flex'>
      <div id='split-left' class='overflow-auto fs0 height-viewport-100'>
        <div class='py1 px2'>
          <h3 class='mb0 no-anchor'>documentation</h3>
          <div class='mb1'><code>5.3.1</code></div>
          <input
            placeholder='Filter'
            id='filter-input'
            class='col12 block input'
            type='text' />
          <div id='toc'>
            <ul class='list-reset h5 py1-ul'>
              
                
                <li><a
                  href='#klass'
                  class=\\" toggle-sibling\\">
                  Klass
                  <span class='icon'>▸</span>
                </a>
                
                <div class='toggle-target display-none'>
                  
                  <ul class='list-reset py1-ul pl1'>
                    <li class='h5'><span>Static members</span></li>
                    
                      <li><a
                        href='#klassisclass'
                        class='regular pre-open'>
                        .isClass
                      </a></li>
                    
                      <li><a
                        href='#klassisweird'
                        class='regular pre-open'>
                        .isWeird
                      </a></li>
                    
                      <li><a
                        href='#klassisbuffer'
                        class='regular pre-open'>
                        .isBuffer
                      </a></li>
                    
                      <li><a
                        href='#klassisarrayofbuffers'
                        class='regular pre-open'>
                        .isArrayOfBuffers
                      </a></li>
                    
                      <li><a
                        href='#klassmagic_number'
                        class='regular pre-open'>
                        .MAGIC_NUMBER
                      </a></li>
                    
                    </ul>
                  
                  
                    <ul class='list-reset py1-ul pl1'>
                      <li class='h5'><span>Instance members</span></li>
                      
                      <li><a
                        href='#klassgetfoo'
                        class='regular pre-open'>
                        #getFoo
                      </a></li>
                      
                      <li><a
                        href='#klasswithoptions'
                        class='regular pre-open'>
                        #withOptions
                      </a></li>
                      
                    </ul>
                  
                  
                  
                    <ul class='list-reset py1-ul pl1'>
                      <li class='h5'>Events</li>
                      
                        <li><a
                          href='#klasseventevent'
                          class='regular pre-open'>
                          ⓔ event
                        </a></li>
                      
                    </ul>
                  
                </div>
                
                </li>
              
                
                <li><a
                  href='#customerror'
                  class=\\"\\">
                  CustomError
                  
                </a>
                
                </li>
              
                
                <li><a
                  href='#bar'
                  class=\\"\\">
                  bar
                  
                </a>
                
                </li>
              
                
                <li><a
                  href='#bar'
                  class=\\"\\">
                  bar
                  
                </a>
                
                </li>
              
                
                <li><a
                  href='#bar'
                  class=\\"\\">
                  bar
                  
                </a>
                
                </li>
              
                
                <li><a
                  href='#foo'
                  class=\\" toggle-sibling\\">
                  Foo
                  <span class='icon'>▸</span>
                </a>
                
                <div class='toggle-target display-none'>
                  
                  
                    <ul class='list-reset py1-ul pl1'>
                      <li class='h5'><span>Instance members</span></li>
                      
                      <li><a
                        href='#foobar'
                        class='regular pre-open'>
                        #bar
                      </a></li>
                      
                    </ul>
                  
                  
                  
                </div>
                
                </li>
              
                
                <li><a
                  href='#customstreams'
                  class=\\" toggle-sibling\\">
                  customStreams
                  <span class='icon'>▸</span>
                </a>
                
                <div class='toggle-target display-none'>
                  
                  <ul class='list-reset py1-ul pl1'>
                    <li class='h5'><span>Static members</span></li>
                    
                      <li><a
                        href='#customstreamspassthrough'
                        class='regular pre-open'>
                        .passthrough
                      </a></li>
                    
                    </ul>
                  
                  
                  
                  
                </div>
                
                </li>
              
            </ul>
          </div>
          <div class='mt1 h6 quiet'>
            <a href='http://documentation.js.org/reading-documentation.html'>Need help reading this?</a>
          </div>
        </div>
      </div>
      <div id='split-right' class='relative overflow-auto height-viewport-100'>
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='klass'>
      Klass
    </h3>
    
    
  </div>
  

  <p>Creates a new Klass</p>


  <div class='pre p1 fill-light mt0'>new Klass(foo: any)</div>
  
  
    <p>
      Extends
      
        <a href=\\"https://nodejs.org/api/stream.html#stream_class_stream_writable\\">Stream.Writable</a>
      
    </p>
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>foo</span> <code class='quiet'>(any)</code>
	    
          </div>
          
        </div>
      
    </div>
  

  

  

  

  

  
    <div class='py1 quiet mt1 prose-big'>Static Members</div>
    <div class=\\"clearfix\\">
  
    <div class='border-bottom' id='klassisclass'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>isClass(other, also)</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>Decide whether an object is a Klass instance
This is a [klasssic]<a href=\\"#klass\\">Klass</a>
This is a [link to something that does not exist]<a href=\\"DoesNot\\">DoesNot</a></p>


  <div class='pre p1 fill-light mt0'>isClass(other: <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object\\">Object</a>, also: any): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean\\">boolean</a></div>
  
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>other</span> <code class='quiet'>(<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object\\">Object</a>)</code>
	    
          </div>
          
        </div>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>also</span> <code class='quiet'>(any)</code>
	    
          </div>
          
        </div>
      
    </div>
  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean\\">boolean</a></code>:
        whether the other thing is a Klass

      
    
  

  

  

  

  

  
</section>

      </div>
    </div>
  
    <div class='border-bottom' id='klassisweird'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>isWeird(other)</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>A function that triggers the case where the autolinker doesn't find
the referenced class type</p>


  <div class='pre p1 fill-light mt0'>isWeird(other: Weird): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean\\">boolean</a></div>
  
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>other</span> <code class='quiet'>(Weird)</code>
	    
          </div>
          
        </div>
      
    </div>
  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean\\">boolean</a></code>:
        whether the other thing is a Klass

      
    
  

  

  

  

  

  
</section>

      </div>
    </div>
  
    <div class='border-bottom' id='klassisbuffer'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>isBuffer(buf, size)</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>This method takes a Buffer object that will be linked to nodejs.org</p>


  <div class='pre p1 fill-light mt0'>isBuffer(buf: (<a href=\\"https://nodejs.org/api/buffer.html\\">Buffer</a> | <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String\\">string</a>), size: <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a>): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean\\">boolean</a></div>
  
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>buf</span> <code class='quiet'>((<a href=\\"https://nodejs.org/api/buffer.html\\">Buffer</a> | <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String\\">string</a>))</code>
	    
          </div>
          
        </div>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>size</span> <code class='quiet'>(<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a>
            = <code>0</code>)</code>
	    size

          </div>
          
        </div>
      
    </div>
  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Boolean\\">boolean</a></code>:
        whether the other thing is a Klass

      
    
  

  

  

  

  

  
</section>

      </div>
    </div>
  
    <div class='border-bottom' id='klassisarrayofbuffers'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>isArrayOfBuffers(buffers)</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>This method takes an array of buffers and counts them</p>


  <div class='pre p1 fill-light mt0'>isArrayOfBuffers(buffers: <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array\\">Array</a>&#x3C;<a href=\\"https://nodejs.org/api/buffer.html\\">Buffer</a>>): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a></div>
  
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>buffers</span> <code class='quiet'>(<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array\\">Array</a>&#x3C;<a href=\\"https://nodejs.org/api/buffer.html\\">Buffer</a>>)</code>
	    some buffers

          </div>
          
        </div>
      
    </div>
  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a></code>:
        how many

      
    
  

  

  
    <div class='py1 quiet mt1 prose-big'>Example</div>
    
      
      <pre class='p1 overflow-auto round fill-light'><span class=\\"hljs-keyword\\">var</span> k = <span class=\\"hljs-keyword\\">new</span> Klass();
k.isArrayOfBuffers();</pre>
    
  

  

  

  
</section>

      </div>
    </div>
  
    <div class='border-bottom' id='klassmagic_number'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>MAGIC_NUMBER</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>A magic number that identifies this Klass.</p>


  <div class='pre p1 fill-light mt0'>MAGIC_NUMBER</div>
  
  

  
  
  
  
  
  

  

  

  

  

  

  

  

  
</section>

      </div>
    </div>
  
</div>

  

  
    <div class='py1 quiet mt1 prose-big'>Instance Members</div>
    <div class=\\"clearfix\\">
  
    <div class='border-bottom' id='klassgetfoo'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>getFoo()</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>Get this Klass's foo</p>


  <div class='pre p1 fill-light mt0'>getFoo(): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">Number</a></div>
  
  

  
  
  
  
  
  

  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">Number</a></code>:
        foo

      
    
  

  

  
    <div class='py1 quiet mt1 prose-big'>Example</div>
    
      <p><p>this shows you how to getFoo</p>
</p>
      <pre class='p1 overflow-auto round fill-light'><span class=\\"hljs-keyword\\">var</span> x = foo.getFoo();</pre>
    
  

  

  

  
</section>

      </div>
    </div>
  
    <div class='border-bottom' id='klasswithoptions'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>withOptions(options, otherOptions)</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>A function with an options parameter</p>


  <div class='pre p1 fill-light mt0'>withOptions(options: <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object\\">Object</a>, otherOptions: <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a>?)</div>
  
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>options</span> <code class='quiet'>(<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object\\">Object</a>)</code>
	    
          </div>
          
          <table class='mt1 mb2 fixed-table h5 col-12'>
            <colgroup>
              <col width='30%' />
              <col width='70%' />
            </colgroup>
            <thead>
              <tr class='bold fill-light'>
                <th>Name</th>
                <th>Description</th>
              </tr>
            </thead>
            <tbody class='mt1'>
              
                <tr>
                  <td class='break-word'><span class='code bold'>options.foo</span> <code class='quiet'><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String\\">string</a></code>
                  </td>
                  <td class='break-word'><span></span></td>
                </tr>
              
                <tr>
                  <td class='break-word'><span class='code bold'>options.bar</span> <code class='quiet'><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a></code>
                  </td>
                  <td class='break-word'><span></span></td>
                </tr>
              
            </tbody>
          </table>
          
        </div>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>otherOptions</span> <code class='quiet'>(<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a>?)</code>
	    
          </div>
          
        </div>
      
    </div>
  

  

  

  

  

  

  

  
</section>

      </div>
    </div>
  
</div>

  

  
    <div class='py1 quiet mt1 prose-big'>Events</div>
    <div class=\\"clearfix\\">
  
    <div class='border-bottom' id='klasseventevent'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>event</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>Klass event</p>


  <div class='pre p1 fill-light mt0'>event</div>
  
  

  
  
  
  
  
  

  

  

  

  

  

  

  

  
</section>

      </div>
    </div>
  
</div>

  
</section>

          
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='customerror'>
      CustomError
    </h3>
    
    
  </div>
  

  <p>a typedef with nested properties</p>


  <div class='pre p1 fill-light mt0'>CustomError</div>
  
  

  
  
  
  
  
  

  

  
    <div class='py1 quiet mt1 prose-big'>Properties</div>
    <div>
      
        <div class='space-bottom0'>
          <span class='code bold'>error</span> <code class='quiet'>(<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object\\">object</a>)</code>
          : An error

          
            <ul>
              
                <li><code>error.code</code> <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String\\">string</a>
                  
                  <p>The error's code</p>
</li>
              
                <li><code>error.description</code> <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String\\">string</a>
                  
                  <p>The error's description</p>
</li>
              
            </ul>
          
        </div>
      
    </div>
  

  

  

  

  

  

  
</section>

          
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='bar'>
      bar
    </h3>
    
    
  </div>
  

  <p>Get an instance of <a href=\\"#klass\\">Klass</a>. Will make
a <a href=\\"#klass\\">klass instance multiword</a>,
like a <a href=\\"#klass\\">klass</a></p>


  <div class='pre p1 fill-light mt0'>bar(): <a href=\\"#klass\\">Klass</a></div>
  
  

  
  
  
  
  
  

  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"#klass\\">Klass</a></code>:
        that class

      
    
  

  

  

  

  

  
</section>

          
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='bar'>
      bar
    </h3>
    
    
  </div>
  

  <p>Rest property function</p>


  <div class='pre p1 fill-light mt0'>bar(toys: ...<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">Number</a>): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined\\">undefined</a></div>
  
  

  
  
  
  
  
  

  
    <div class='py1 quiet mt1 prose-big'>Parameters</div>
    <div class='prose'>
      
        <div class='space-bottom0'>
          <div>
            <span class='code bold'>toys</span> <code class='quiet'>(...<a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">Number</a>)</code>
	    
          </div>
          
        </div>
      
    </div>
  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined\\">undefined</a></code>:
        nothing

      
    
  

  

  

  

  

  
</section>

          
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='bar'>
      bar
    </h3>
    
    
  </div>
  

  <p>Get an instance of <a href=\\"#klass\\">Klass</a>. Will make
a <a href=\\"#klass\\">klass instance multiword</a>,
like a <a href=\\"#klass\\">klass</a>. This needs a <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number\\">number</a> input.</p>


  <div class='pre p1 fill-light mt0'>bar(): <a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined\\">undefined</a></div>
  
  

  
  
  
  
  
  

  

  

  
    
      <div class='py1 quiet mt1 prose-big'>Returns</div>
      <code><a href=\\"https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/undefined\\">undefined</a></code>:
        nothing

      
    
  

  

  

  

  

  
</section>

          
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='foo'>
      Foo
    </h3>
    
    
  </div>
  

  <p>This is Foo</p>


  <div class='pre p1 fill-light mt0'>new Foo()</div>
  
  

  
  
  
  
  
  

  

  

  

  

  

  

  
    <div class='py1 quiet mt1 prose-big'>Instance Members</div>
    <div class=\\"clearfix\\">
  
    <div class='border-bottom' id='foobar'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>bar</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>This is bar</p>


  <div class='pre p1 fill-light mt0'>bar</div>
  
  

  
  
  
  
  
  

  

  

  

  

  

  

  

  
</section>

      </div>
    </div>
  
</div>

  

  
</section>

          
        
          
            <section class='p2 mb2 clearfix bg-white minishadow'>

  
  <div class='clearfix'>
    
    <h3 class='fl m0' id='customstreams'>
      customStreams
    </h3>
    
    
  </div>
  

  <p>I am the container of stream types</p>


  <div class='pre p1 fill-light mt0'>customStreams</div>
  
  

  
  
  
  
  
  

  

  

  

  

  

  
    <div class='py1 quiet mt1 prose-big'>Static Members</div>
    <div class=\\"clearfix\\">
  
    <div class='border-bottom' id='customstreamspassthrough'>
      <div class=\\"clearfix small pointer toggle-sibling\\">
        <div class=\\"py1 contain\\">
            <a class='icon pin-right py1 dark-link caret-right'>▸</a>
            <span class='code strong strong truncate'>new passthrough()</span>
        </div>
      </div>
      <div class=\\"clearfix display-none toggle-target\\">
        <section class='p2 mb2 clearfix bg-white minishadow'>

  

  <p>I am a passthrough stream that belongs to customStreams</p>


  <div class='pre p1 fill-light mt0'>new passthrough()</div>
  
  

  
  
  
  
  
  

  

  

  

  

  

  

  

  
</section>

      </div>
    </div>
  
</div>

  

  

  
</section>

          
        
      </div>
    </div>
  <script src='assets/anchor.js'></script>
  <script src='assets/split.js'></script>
  <script src='assets/site.js'></script>
</body>
</html>
"
`;

exports[`multi-file input 1`] = `
Array [
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 1,
          "line": 13,
        },
        "start": Position {
          "column": 0,
          "line": 10,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 43,
                  "line": 1,
                  "offset": 42,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number plus two.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 43,
              "line": 1,
              "offset": 42,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 43,
          "line": 1,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [
      Object {
        "description": "var result = returnTwo(4);
// result is 6",
      },
    ],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 9,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "returnTwo",
    "namespace": "returnTwo",
    "params": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 11,
                      "line": 1,
                      "offset": 10,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "the number",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 11,
                  "line": 1,
                  "offset": 10,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 11,
              "line": 1,
              "offset": 10,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "lineNumber": 3,
        "name": "a",
        "title": "param",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "path": Array [
      Object {
        "kind": "function",
        "name": "returnTwo",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numbertwo",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "the number",
        "lineNumber": 3,
        "name": "a",
        "title": "param",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
      Object {
        "description": "numbertwo",
        "lineNumber": 4,
        "title": "returns",
        "type": Object {
          "name": "Number",
          "type": "NameExpression",
        },
      },
      Object {
        "description": "var result = returnTwo(4);
// result is 6",
        "lineNumber": 5,
        "title": "example",
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
  Object {
    "augments": Array [],
    "context": Object {
      "loc": SourceLocation {
        "end": Position {
          "column": 2,
          "line": 8,
        },
        "start": Position {
          "column": 0,
          "line": 5,
        },
      },
    },
    "description": Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "position": Position {
                "end": Object {
                  "column": 38,
                  "line": 1,
                  "offset": 37,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "text",
              "value": "This function returns the number one.",
            },
          ],
          "position": Position {
            "end": Object {
              "column": 38,
              "line": 1,
              "offset": 37,
            },
            "indent": Array [],
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "paragraph",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 38,
          "line": 1,
          "offset": 37,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "root",
    },
    "errors": Array [],
    "examples": Array [],
    "kind": "function",
    "loc": SourceLocation {
      "end": Position {
        "column": 3,
        "line": 4,
      },
      "start": Position {
        "column": 0,
        "line": 1,
      },
    },
    "members": Object {
      "events": Array [],
      "global": Array [],
      "inner": Array [],
      "instance": Array [],
      "static": Array [],
    },
    "name": "simple.input",
    "namespace": "simple.input",
    "params": Array [],
    "path": Array [
      Object {
        "kind": "function",
        "name": "simple.input",
      },
    ],
    "properties": Array [],
    "returns": Array [
      Object {
        "description": Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Position {
                    "end": Object {
                      "column": 10,
                      "line": 1,
                      "offset": 9,
                    },
                    "indent": Array [],
                    "start": Object {
                      "column": 1,
                      "line": 1,
                      "offset": 0,
                    },
                  },
                  "type": "text",
                  "value": "numberone",
                },
              ],
              "position": Position {
                "end": Object {
                  "column": 10,
                  "line": 1,
                  "offset": 9,
                },
                "indent": Array [],
                "start": Object {
                  "column": 1,
                  "line": 1,
                  "offset": 0,
                },
              },
              "type": "paragraph",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 10,
              "line": 1,
              "offset": 9,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "root",
        },
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "sees": Array [],
    "tags": Array [
      Object {
        "description": "numberone",
        "lineNumber": 2,
        "title": "returns",
        "type": Object {
          "name": "number",
          "type": "NameExpression",
        },
      },
    ],
    "throws": Array [],
    "todos": Array [],
  },
]
`;
